Coursework: upgraded project structure